Retoques en KMeans.java
Refactorización calcularDistancia
+
Comentarios en train
+
Adición de Excepciones en calcularCentroide y calcularDistancia